--- a/src/shared/components/challenge-listing/ChallengeCard/Prize/style.scss
+++ b/src/shared/components/challenge-listing/ChallengeCard/Prize/style.scss
@@ -19,5 +19,5 @@
 
 .symbol {
   display: inline-block;
-  color: $tc-gray-50;
+  color: $tc-gray-80;
 }
