--- a/src/shared/components/challenge-listing/ChallengeCard/Status/style.scss
+++ b/src/shared/components/challenge-listing/ChallengeCard/Status/style.scss
@@ -77,7 +77,7 @@ $status-radius-4: $corner-radius * 2;
 
     .time-left {
       text-align: left;
-      color: $tc-gray-50;
+      color: $tc-gray-70;
       font-size: 12px;
       line-height: $status-space-15;
       font-weight: 400;
