--- a/src/shared/components/challenge-listing/Listing/Bucket/style.scss
+++ b/src/shared/components/challenge-listing/Listing/Bucket/style.scss
@@ -16,7 +16,7 @@
   border-left: 0;
   border-radius: 0;
   border-right: 0;
-  color: $tc-gray-50;
+  color: $tc-gray-70;
   cursor: pointer;
   display: block;
   font: 300 13px Arial, sans-serif;
