--- a/src/shared/components/challenge-listing/Sidebar/Footer/style.scss
+++ b/src/shared/components/challenge-listing/Sidebar/Footer/style.scss
@@ -36,7 +36,7 @@
     right: 0;
     font-weight: 500;
     font-size: 13px;
-    color: $tc-gray-30;
+    color: $tc-gray-70;
     line-height: 30px;
   }
 }
